MW-28 : sonar visibitlity + switch + improvements